# access_control

./: .gitignore  CMakeLists.txt  README.md  configuration.json  db.sqlite3  manage.py
applicationServer/: AuthenticationProtocol.cpp  AuthenticationProtocol.h  CommunicationProtocol.cpp  CommunicationProtocol.h  Connection.cpp  Connection.h  FirewallManager.cpp  ServerApplication.cpp  jsonFileLoader.cpp  jsonFileLoader.h  main.cpp
cpp/: CMakeLists.txt  README.md  run_server.sh
cpp/app-server/: CMakeLists.txt  calendarFile.json  configuration.json  usersFile.json
cpp/app-server/src/: Connection.cpp  Connection.h  FirewallManager.h  IptablesManager.cpp  IptablesManager.h  Logger.cpp  Logger.h  ServerApplication.cpp  ServerApplication.h  ServerConnection.cpp  ServerConnection.h  calendarManager.cpp  calendarManager.h  iptablesManager.cpp  iptablesManager.h  jsonFileLoader.cpp  jsonFileLoader.h  jsonFileManager.cpp  jsonFileManager.h  main.cpp  utils.cpp  utils.h
cpp/shared/: CommunicationProtocol.cpp  JsonMessageBuffer.cpp  JsonMessageBuffer.h  auth-protocol.cpp  auth-protocol.h  communication-protocol.cpp  communication-protocol.h  connection.cpp  connection.h  reservation.cpp  reservation.h  reservation.hpp  socket-transfer.cpp  socket-transfer.h  socket-utils.cpp  socket-utils.h
cpp/snippets/: CMakeLists.txt  json_buffer.cpp  main.cpp  reservations_passing.cpp
cpp/terminal-client/: CMakeLists.txt
cpp/terminal-client/src/: client-application.cpp  client-application.h  client-connection.cpp  client-connection.h  connection.cpp  connection.h  main.cpp  utils.cpp  utils.h
djApplication/: views.py
djTestProject/: settings.py  wsgi.py
static/css/: calendar.css  index.css
templates/: calendar.html  reservationSite.html
terminal-client/: CMakeLists.txt  README.md  makefile
terminal-client/src/: CMakeLists.txt  auth-protocol.h  client-application.cpp  client-application.h  connection.cpp  connection.h  main.cpp  reservation.hpp  sha3.cpp  sha3.h
web/: README.md  calendarFile.json  configuration.json  db.sqlite3  defaulttestSite.conf  testSite.conf
web/djApplication/: apps.py  urls.py  views.py
web/djTestProject/: settings.py  urls.py
web/static/css/: calendar.css  index.css  loginSite.css
web/static/js/: calendar.js
web/templates/: base.html  calendar.html  index.html  reservationSite.html
